--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -13,20 +13,24 @@
     <body class="body-bg">
 
 <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg bg-warning">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="INDEX.HTML">Mega Games</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true"></a>
-              </li>
-              <a href="INICIOSESION.HTML"><button type="button" class=" btn btn-primary">INICIAR SESION</button></a>
-              <a href="REGISTRO.HTML"><button type="button" class=" btn btn-primary d-flex">REGISTRARME</button></a>
-            </div>
-          </div>
-        </div>
-      </nav>
+<nav class="navbar navbar-expand-lg bg-warning">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="INDEX.HTML">Mega Games</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true"></a>
+        </li>
+      </ul>
+        <a href="INICIOSESION.HTML"><button type="button" class=" btn btn-primary ms-3">CARRITO</button></a>
+        <a href="INICIOSESION.HTML"><button type="button" class=" btn btn-primary ms-3">INICIAR SESION</button></a>
+        <a href="REGISTRO.HTML"><button type="button" class=" btn btn-primary ms-3">REGISTRARME</button></a>
+    </div>
+  </div>
+</nav>
 
       <!--CAROUSEL-->
       <div class="container-propio mt-5">
