cambios en el login

--- a/INICIOSESION.HTML
+++ b/INICIOSESION.HTML
@@ -16,29 +16,31 @@
       <a class="navbar-brand" href="INDEX.HTML">Mega Games</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-          <a href="REGISTRO.HTML"><button type="button" class=" btn btn-primary ms-3">REGISTRARME</button></a>
       </div>
     </div>
   </nav>
 
-    <div class="row container-fluid text-center mt-5">
+
+<p id="loginMessage"></p>
+
+
+
+  <div class="row container-fluid text-center mt-5">
     <form id="login">
         <div class="col-md-6 container-fluid">
-          <label for="exampleInputEmail1" class="form-label">DIRECCION EMAIL</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">NUNCA COMPARTAS TUS DATOS CON NADIE!</div>
+          <label for="username" class="form-label">USUARIO</label>
+          <input type="text" class="form-control" id="username" required>
         </div>
         <div class="col-md-6 container">
-          <label for="exampleInputPassword1" class="form-label">CONTRASEÑA</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <label for="password" class="form-label">CONTRASEÑA</label>
+          <input type="password" class="form-control" id="password" required>
         </div>
         <div class="col-md-6 container-fluid">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">RECORDARME</label>
         </div>
         <div class="col-md-6 container-fluid text-center mt-5">
-        <a href="INDEX.HTML"><button type="button" class=" btn btn-primary">ACEPTAR</button></a>
+        <button type="submit" class=" btn btn-primary">ACEPTAR</button>
         </div>
       </form>
     </div>
@@ -62,5 +64,7 @@
         </footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <script type="module" src="./ASSETS/js/index2.js"></script>
+      <script type="module" src="./ASSETS/js/peticion/getUsuarios.js"></script>
 </body>
 </html>
