--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -19,17 +19,39 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true"></a>
         </li>
       </ul>
-        <a href="INICIOSESION.HTML"><button type="button" class=" btn btn-primary ms-3">CARRITO</button></a>
-        <a href="INICIOSESION.HTML"><button type="button" class=" btn btn-primary ms-3">INICIAR SESION</button></a>
+      <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal" data-bs-target="#carritoModal">CARRITO</button>
+      <a href="INICIOSESION.HTML"><button type="button" class="btn btn-primary ms-3">INICIAR SESION</button></a>
     </div>
   </div>
 </nav>
+
+
+<div class="modal fade" id="carritoModal" tabindex="-1" aria-labelledby="carritoModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="carritoModalLabel">Carrito de Compras</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <ul id="carritoItems" class="list-group">
+          <!-- Items del carrito -->
+        </ul>
+        <p class="mt-3">Total: $<span id="totalCarrito">00.000</span></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Comprar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
       <!--CAROUSEL-->
       <div class="container-propio mt-5">
