ultimos cambios y dejar comentado secciones del codigo

--- a/INICIOSESION.HTML
+++ b/INICIOSESION.HTML
@@ -24,7 +24,7 @@
 <p id="loginMessage"></p>
 
 
-
+<!--FORMULARIO PARA INICIAR SESION-->
   <div class="row container-fluid text-center mt-5">
     <form id="login">
         <div class="col-md-6 container-fluid">
@@ -34,10 +34,6 @@
         <div class="col-md-6 container">
           <label for="password" class="form-label">CONTRASEÑA</label>
           <input type="password" class="form-control" id="password" required>
-        </div>
-        <div class="col-md-6 container-fluid">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">RECORDARME</label>
         </div>
         <div class="col-md-6 container-fluid text-center mt-5">
         <button type="submit" class=" btn btn-primary">ACEPTAR</button>
