--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -31,7 +31,7 @@
   </div>
 </nav>
 
-
+<!--CARRITO-->
 <div class="modal fade" id="carritoModal" tabindex="-1" aria-labelledby="carritoModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -43,7 +43,7 @@
         <ul id="carritoItems" class="list-group">
           <!-- Items del carrito -->
         </ul>
-        <p class="mt-3">Total: $<span id="totalCarrito">0.00</span></p>
+        <p class="mt-3">Total: $<span id="totalCarrito">0.000</span></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
